[gd_scene load_steps=33 format=2]

[ext_resource path="res://src/instance/player.gd" type="Script" id=1]
[ext_resource path="res://src/scripts/gun.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/crosshair.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/propaganda/PROPAGAN.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/instance/pause_menu.gd" type="Script" id=5]
[ext_resource path="res://assets/ui/damage_vignette.png" type="Texture" id=6]
[ext_resource path="res://src/instance/SettingsMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sfx/Glitch.ogg" type="AudioStream" id=8]
[ext_resource path="res://src/instance/GunModel.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/ui/grabber_focused.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/button.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/switch_on.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/button_focused.png" type="Texture" id=13]
[ext_resource path="res://assets/ui/grabber.png" type="Texture" id=14]
[ext_resource path="res://assets/ui/switch_off.png" type="Texture" id=15]
[ext_resource path="res://assets/ui/switch_focus.png" type="Texture" id=16]
[ext_resource path="res://assets/ui/slider.png" type="Texture" id=17]

[sub_resource type="Resource" id=2]
script = ExtResource( 2 )
base = 0
secondaries = [ 0 ]
secondary_idx = 0

[sub_resource type="CapsuleShape" id=1]
radius = 0.48

[sub_resource type="StyleBoxTexture" id=35]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 128, 128 )
margin_left = 11.0
margin_right = 10.0
margin_top = 120.0
margin_bottom = 118.0
axis_stretch_horizontal = 1

[sub_resource type="StyleBoxTexture" id=33]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 128, 128 )
margin_left = 10.0
margin_right = 10.0
margin_top = 10.0
margin_bottom = 10.0
axis_stretch_horizontal = 1

[sub_resource type="StyleBoxEmpty" id=39]

[sub_resource type="StyleBoxTexture" id=40]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 16, 32 )
margin_left = 16.0

[sub_resource type="StyleBoxEmpty" id=37]

[sub_resource type="StyleBoxEmpty" id=38]

[sub_resource type="StyleBoxTexture" id=36]
texture = ExtResource( 17 )
region_rect = Rect2( 0, 0, 128, 16 )
margin_left = 8.0
margin_right = 8.0

[sub_resource type="Theme" id=34]
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_hover = Color( 0.992157, 0.929412, 0.427451, 1 )
Button/styles/focus = SubResource( 35 )
Button/styles/hover = SubResource( 33 )
Button/styles/normal = SubResource( 33 )
CheckButton/icons/off = ExtResource( 15 )
CheckButton/icons/on = ExtResource( 12 )
CheckButton/styles/disabled = SubResource( 39 )
CheckButton/styles/focus = SubResource( 40 )
CheckButton/styles/hover = SubResource( 39 )
CheckButton/styles/hover_pressed = SubResource( 39 )
CheckButton/styles/normal = SubResource( 39 )
CheckButton/styles/pressed = SubResource( 39 )
HSlider/icons/grabber = ExtResource( 14 )
HSlider/icons/grabber_highlight = ExtResource( 10 )
HSlider/styles/grabber_area = SubResource( 37 )
HSlider/styles/grabber_area_highlight = SubResource( 38 )
HSlider/styles/slider = SubResource( 36 )

[sub_resource type="DynamicFont" id=5]
size = 128
outline_size = 16
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 128
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.460123, 0.582822 )
colors = PoolColorArray( 0, 0, 0, 0.352941, 0, 0, 0, 0.352941, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 7 )
width = 1920

[node name="Player" type="KinematicBody" groups=["entity", "player"]]
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )
_gun = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Gimbal" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="Camera" type="Camera" parent="Gimbal"]
current = true

[node name="BaseGunModel" parent="Gimbal/Camera" instance=ExtResource( 9 )]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0.238883, -0.316671, 0.383013 )

[node name="AltGunModel" parent="Gimbal/Camera" instance=ExtResource( 9 )]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, -0.239, -0.317, 0.383 )

[node name="BulletSpawn" type="Spatial" parent="Gimbal/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.6 )

[node name="InteractCast" type="RayCast" parent="Gimbal/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -2 )
collide_with_areas = true
collide_with_bodies = false

[node name="WallrunLeftCheck" type="RayCast" parent="Gimbal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
enabled = true
cast_to = Vector3( -1.5, 0, 0 )

[node name="WallrunRightCheck" type="RayCast" parent="Gimbal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
enabled = true
cast_to = Vector3( 1.5, 0, 0 )

[node name="HackyFloorCheck" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -1.1, 0 )

[node name="WallrunTracker" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, 0 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 34 )

[node name="DamageVignette" type="TextureRect" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true

[node name="ColorRect" type="ColorRect" parent="Control/DamageVignette"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0, 0, 0.290196 )

[node name="Label" type="Label" parent="Control"]
margin_right = 40.0
margin_bottom = 14.0

[node name="ColorRect" type="ColorRect" parent="Control/Label"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -3.0
margin_top = -3.0
margin_right = 3.0
margin_bottom = 3.0
texture = ExtResource( 3 )
expand = true

[node name="DeathAction" type="Control" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Control/DeathAction"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0, 0, 0.254902 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control/DeathAction"]
visible = false
anchor_left = 0.1
anchor_top = 0.4
anchor_right = 0.9
anchor_bottom = 0.6

[node name="Label" type="Label" parent="Control/DeathAction"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -540.0
margin_right = 540.0
margin_bottom = 191.0
custom_fonts/font = SubResource( 5 )
text = "YOU ARE DEAD"

[node name="PauseMenu" type="Control" parent="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="Control/PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 0.470588 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PauseMenu"]
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.01
anchor_bottom = 0.01
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Control/PauseMenu/VBoxContainer"]
margin_right = 586.0
margin_bottom = 191.0
custom_fonts/font = SubResource( 3 )
text = "PAUSED"

[node name="ResumeButton" type="Button" parent="Control/PauseMenu/VBoxContainer"]
margin_top = 195.0
margin_right = 586.0
margin_bottom = 264.0
focus_neighbour_bottom = NodePath("../SettingsButton")
custom_fonts/font = SubResource( 4 )
text = "RESUME"

[node name="SettingsButton" type="Button" parent="Control/PauseMenu/VBoxContainer"]
margin_top = 268.0
margin_right = 586.0
margin_bottom = 337.0
focus_neighbour_top = NodePath("../ResumeButton")
focus_neighbour_bottom = NodePath("../RestartButton")
custom_fonts/font = SubResource( 4 )
text = "SETTINGS"

[node name="RestartButton" type="Button" parent="Control/PauseMenu/VBoxContainer"]
margin_top = 341.0
margin_right = 586.0
margin_bottom = 410.0
focus_neighbour_top = NodePath("../SettingsButton")
focus_neighbour_bottom = NodePath("../TitleButton")
custom_fonts/font = SubResource( 4 )
text = "RESTART"

[node name="TitleButton" type="Button" parent="Control/PauseMenu/VBoxContainer"]
margin_top = 414.0
margin_right = 586.0
margin_bottom = 483.0
focus_neighbour_top = NodePath("../RestartButton")
custom_fonts/font = SubResource( 4 )
text = "Return to Title"

[node name="SettingsMenu" parent="Control/PauseMenu" instance=ExtResource( 7 )]

[node name="TextureRect" type="TextureRect" parent="Control/PauseMenu/SettingsMenu"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.98
texture = SubResource( 6 )
expand = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[connection signal="pressed" from="Control/PauseMenu/VBoxContainer/ResumeButton" to="Control/PauseMenu" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Control/PauseMenu/VBoxContainer/SettingsButton" to="Control/PauseMenu" method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Control/PauseMenu/VBoxContainer/RestartButton" to="Control/PauseMenu" method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Control/PauseMenu/VBoxContainer/TitleButton" to="Control/PauseMenu" method="_on_TitleButton_pressed"]
[connection signal="back_pressed" from="Control/PauseMenu/SettingsMenu" to="Control/PauseMenu" method="_on_SettingsMenu_back_pressed"]
